Add EN-24:05 through EN-24:08, SA-24:03.
Approved by:	so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,22 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-24:08.kerberos"
+date = "2024-03-28"
+
+[[notices]]
+name = "FreeBSD-EN-24:07.clang"
+date = "2024-03-28"
+
+[[notices]]
+name = "FreeBSD-EN-24:06.wireguard"
+date = "2024-03-28"
+
+[[notices]]
+name = "FreeBSD-EN-24:05.tty"
+date = "2024-03-28"
+
+[[notices]]
 name = "FreeBSD-EN-24:04.ip"
 date = "2024-02-14"
 
