- traditional Chinese Translation of the news items (Feb 2024)

--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,15 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date= "2024-02-16"
+title = "2023 第四季開發進度報告發布"
+description = "<a href=\"https://www.freebsd.org/status/report-2023-10-2023-12/\">2023 第四季開發進度報告發布</a> 18則條目現已發布。"
+
+[[news]]
+date = "2024-02-13"
+description = "新任 committer: <a href=\"mailto:bnovkov@FreeBSD.org\">Bojan Novković</a> (src)"
+
+[[news]]
 date = "2024-01-26"
 description = "新任 committer: <a href=\"mailto:uzsolt@FreeBSD.org\">Zsolt Udvari</a> (ports)"
 
