--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-24:09.zfs"
+date = "2024-04-24"
+
+[[notices]]
 name = "FreeBSD-EN-24:08.kerberos"
 date = "2024-03-28"
 
