News: Announce 2024Q1 Status Report

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date= "2024-05-03"
+title = "January-March 2024 Status Report"
+description = "The <a href=\"https://www.freebsd.org/status/report-2024-01-2024-03/\">January to March Status Report</a> is now available with 21 entries."
+
+[[news]]
 date = "2024-03-05"
 title = "FreeBSD 13.3-RELEASE Available"
 description = "<a href=\"https://www.FreeBSD.org/releases/13.3R/announce/\">FreeBSD 13.3-RELEASE</a> is now available. Please be sure to check the <a href=\"https://www.FreeBSD.org/releases/13.3R/relnotes/\">Release Notes</a> and <a href=\"https://www.FreeBSD.org/releases/13.3R/errata/\">Release Errata</a> before installation for any late-breaking news and/or issues with 13.3. More information about FreeBSD releases can be found on the <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a> page."
