.cirrus.yml: Change to 14.0-RELEASE

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,7 +4,7 @@ env:
 task:
   persistent_worker:
     labels:
-      jail: FreeBSD-13-2-release
+      jail: FreeBSD-14-0-release-doc
   timeout_in: 20m
   test_script:
     - make
