--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date= "2024-05-03"
+title = "2024 第一季開發進度報告發布"
+description = "The <a href=\"https://www.freebsd.org/status/report-2024-01-2024-03/\">2024 第一季開發進度報告發布</a> 21則條目現已發布。"
+
+[[news]]
 date = "2024-03-05"
 title = "FreeBSD 13.3-RELEASE 發布了"
 description = "<a href=\"https://www.FreeBSD.org/releases/13.3R/announce/\">FreeBSD 13.3-RELEASE</a>現已發布了。安裝前，請查看 <a href=\"https://www.FreeBSD.org/releases/13.3R/relnotes/\">發布通知</a> 和 <a href=\"https://www.FreeBSD.org/releases/13.3R/errata/\">發行勘誤</a> 以了解 13.3 的最新消息和問題。更多資訊可查看 <a href=\"https://www.FreeBSD.org/releases/\">發行版資訊</a>頁面。"
