News: Add entry for 2024 Community Survey Results
Sponsored by:	The FreeBSD Foundation

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -6,6 +6,11 @@ title = "FreeBSD 14.1-RELEASE Available"
 description = "<a href=\"https://www.FreeBSD.org/releases/14.1R/announce/\">FreeBSD 14.1-RELEASE</a> is now available. Please be sure to check the <a href=\"https://www.FreeBSD.org/releases/14.1R/relnotes/\">Release Notes</a> and <a href=\"https://www.FreeBSD.org/releases/14.1R/errata/\">Release Errata</a> before installation for any late-breaking news and/or issues with 14.1. More information about FreeBSD releases can be found on the <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a> page."
 
 [[news]]
+date = "2024-05-29"
+title = "2024 Community Survey Results"
+description = "The <a href=\"https://freebsdfoundation.org/blog/results-from-the-2024-freebsd-community-survey-report/\">2024 FreeBSD Community Survey Results</a> are now available."
+
+[[news]]
 date= "2024-05-03"
 title = "January-March 2024 Status Report"
 description = "The <a href=\"https://www.freebsd.org/status/report-2024-01-2024-03/\">January to March Status Report</a> is now available with 21 entries."
