newsflash: Add core.13 announcement
Approved by:	core

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2024-06-12"
+title = "New FreeBSD Core Team Elected"
+description = "Active committers to the project have elected your twelfth FreeBSD Core Team. For details, refer to the <a href=\"https://lists.freebsd.org/archives/freebsd-announce/2024-June/000136.html\">official announcement</a>."
+
+[[news]]
 date = "2024-06-04"
 title = "FreeBSD 14.1-RELEASE Available"
 description = "<a href=\"https://www.FreeBSD.org/releases/14.1R/announce/\">FreeBSD 14.1-RELEASE</a> is now available. Please be sure to check the <a href=\"https://www.FreeBSD.org/releases/14.1R/relnotes/\">Release Notes</a> and <a href=\"https://www.FreeBSD.org/releases/14.1R/errata/\">Release Errata</a> before installation for any late-breaking news and/or issues with 14.1. More information about FreeBSD releases can be found on the <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a> page."
