newsflash: Fix ordinal number in the core.13 announcement entry
Reported by:	jhb

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -3,7 +3,7 @@
 [[news]]
 date = "2024-06-12"
 title = "New FreeBSD Core Team Elected"
-description = "Active committers to the project have elected your twelfth FreeBSD Core Team. For details, refer to the <a href=\"https://lists.freebsd.org/archives/freebsd-announce/2024-June/000136.html\">official announcement</a>."
+description = "Active committers to the project have elected your thirteenth FreeBSD Core Team. For details, refer to the <a href=\"https://lists.freebsd.org/archives/freebsd-announce/2024-June/000136.html\">official announcement</a>."
 
 [[news]]
 date = "2024-06-04"
