--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date = "2024-06-12"
+title = "新的 FreeBSD Core Team 已選出"
+description = "本計畫活躍的 committer 已選舉出第 13 屆 FreeBSD Core Team。詳情請見 <a href=\"https://lists.freebsd.org/archives/freebsd-announce/2024-June/000136.html\">官方公告</a>。"
+
+[[news]]
 date = "2024-06-04"
 title = "FreeBSD 14.1-RELEASE 發布了"
 description = "<a href=\"https://www.FreeBSD.org/releases/14.1R/announce/\">FreeBSD 14.1-RELEASE</a>現已發布了。安裝前，請查看 <a href=\"https://www.FreeBSD.org/releases/14.1R/relnotes/\">發布通知</a>和 <a href=\"https://www.FreeBSD.org/releases/14.1R/errata/\">發行勘誤</a>以了解 14.1 的最新消息和問題。更多資訊可查看 <a href=\"https://www.FreeBSD.org/releases/\">發行版資訊</a>頁面。"
