--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2024-08-03"
+title = "FreeBSD 13.4-BETA1 Available"
+description = "The first BETA build for the FreeBSD 13.4 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv6, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-August/002336.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
+
+[[news]]
 date = "2024-06-12"
 title = "New FreeBSD Core Team Elected"
 description = "Active committers to the project have elected your thirteenth FreeBSD Core Team. For details, refer to the <a href=\"https://lists.freebsd.org/archives/freebsd-announce/2024-June/000136.html\">official announcement</a>."
