website: Add EN-24:14 and SA-24:05 through SA-24:08.
Approved by:	so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-24:14.ifconfig"
+date = "2024-08-07"
+
+[[notices]]
 name = "FreeBSD-EN-24:13.libc++"
 date = "2024-06-19"
 
