events: Add site of EuroBSDCon 2024
Sponsored by:	The FreeBSD Foundation

--- a/website/data/en/events/events2024.toml
+++ b/website/data/en/events/events2024.toml
@@ -46,7 +46,7 @@ endDate = "2024-09-22"
 countryCode = "IE"
 country = "Ireland"
 city = "Dublin"
-site = "TBA"
+site = "UCD O’Reilly Hall"
 description = "EuroBSDcon is the European annual technical conference gathering users and developers working on and with 4.4BSD (Berkeley Software Distribution) based operating systems family and related projects."
 
 [[events]]
