--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date= "2024-08-19"
+title = "April-June 2024 Status Report"
+description = "The <a href=\"https://www.freebsd.org/status/report-2024-04-2024-06/\">April to June Status Report</a> is now available with 20 entries."
+
+[[news]]
 date = "2024-08-17"
 title = "FreeBSD 13.4-BETA3 Available"
 description = "The third BETA build for the FreeBSD 13.4 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv6, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-August/002339.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
