Allow git command
Use the default configuration as show in the Hugo site:
https://gohugo.io/about/security/#security-policy

Necessary for the upcoming update to hugo 0.133.0

--- a/website/config/_default/hugo.toml
+++ b/website/config/_default/hugo.toml
@@ -21,7 +21,7 @@ preserveTOC = true
 [security]
   enableInlineShortcodes = false
   [security.exec]
-    allow = ["^dart-sass-embedded$", "^go$", "^npx$", "^postcss$", "^asciidoctor$"]
+    allow = ["^dart-sass-embedded$", "^go$", "^git$", "^npx$", "^postcss$", "^asciidoctor$"]
     osEnv = ["(?i)^(PATH|PATHEXT|APPDATA|TMP|TEMP|TERM|LOAD_PATH|RUBYLIB)$"]
   [security.funcs]
     getenv = ["^HUGO_"]
