- traditional Chinese Translation of the news items (August 2024)

--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,26 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date= "2024-08-19"
+title = "2024 第二季開發進度報告發布"
+description = "The <a href=\"https://www.freebsd.org/status/report-2024-04-2024-06/\">2024 第二季開發進度報告發布</a> 20則條目現已發布。"
+
+[[news]]
+date = "2024-08-17"
+title = "FreeBSD 13.4-BETA3 發布了"
+description = "FreeBSD 13.4 的第三個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-August/002339.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date = "2024-08-10"
+title = "FreeBSD 13.4-BETA2 發布了"
+description = "FreeBSD 13.4 的第二個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-August/002338.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date = "2024-08-03"
+title = "FreeBSD 13.4-BETA1 發布了"
+description = "FreeBSD 13.4 的第一個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-August/002336.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
 date = "2024-06-12"
 title = "新的 FreeBSD Core Team 已選出"
 description = "本計畫活躍的 committer 已選舉出第 13 屆 FreeBSD Core Team。詳情請見 <a href=\"https://lists.freebsd.org/archives/freebsd-announce/2024-June/000136.html\">官方公告</a>。"
