--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -6,6 +6,10 @@ title = "FreeBSD 13.4-RC1 Available"
 description = "The first Release Candidate build for the FreeBSD 13.4 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv6, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-August/002345.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
 
 [[news]]
+date = "2024-08-22"
+description = "New committer: <a href=\"mailto:igoro@FreeBSD.org\">Igor Ostapenko</a> (src)"
+
+[[news]]
 date= "2024-08-19"
 title = "April-June 2024 Status Report"
 description = "The <a href=\"https://www.freebsd.org/status/report-2024-04-2024-06/\">April to June Status Report</a> is now available with 20 entries."
