- traditional Chinese Translation of the latest news items (13.4 RC2 release)

--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date = "2024-08-31"
+title = "FreeBSD 13.4-RC2 發布了"
+description = "FreeBSD 13.R4的第二個候選發布版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-snapshots/2024-August/002352.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
 date = "2024-08-24"
 title = "FreeBSD 13.4-RC1 發布了"
 description = "FreeBSD 13.R4的第一個候選發布版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-snapshots/2024-August/002345.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
