press: Add the Foundation's blog about Sovereign Tech Fund investment
Sponsored by:	The FreeBSD Foundation

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,14 @@
 # Sort the entries by date
 [[press]]
+name = "Sovereign Tech Fund to Invest €686,400 in FreeBSD Infrastructure Modernization"
+url = "https://freebsdfoundation.org/blog/sovereign-tech-fund-to-invest-e686400-in-freebsd-infrastructure-modernization/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2023-08-26"
+author = "FreeBSD Foundation"
+description = "Investment to accelerate zero trust builds, SBOM, security tooling, and developer experience"
+
+[[press]]
 name = "FreeBSD 14 Release: Best New Features"
 url = "https://www.debugpoint.com/freebsd-14-features/"
 siteName = "debugpoint.com"
