Add advisories to relavent toml files.
Approved by:	so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-24:15.calendar"
+date = "2024-09-04"
+
+[[notices]]
 name = "FreeBSD-EN-24:14.ifconfig"
 date = "2024-08-07"
 
