Add EN-24:16, SA-24:15, and SA-24:16. Update SA-24:05 and SA-24:09.
Approved by:	so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-24:16.pf"
+date = "2024-09-19"
+
+[[notices]]
 name = "FreeBSD-EN-24:15.calendar"
 date = "2024-09-04"
 
