Add BSDCan 2025 to the events

--- a/website/data/en/events/events2025.toml
+++ b/website/data/en/events/events2025.toml
@@ -13,3 +13,15 @@ city = "Tokyo"
 site = "Tokyo University of Science"
 description = "AsiaBSDCon is a conference for users and developers on BSD based systems. The conference is for anyone developing, deploying and using systems based on FreeBSD, NetBSD, OpenBSD, DragonFlyBSD, Darwin and MacOS X. AsiaBSDCon is a technical conference and aims to collect the best technical papers and presentations available to ensure that the latest developments in our open source community are shared with the widest possible audience."
 
+[[events]]
+id = "bsdcan-2025"
+name = "BSDCan 2025"
+url = "https://www.bsdcan.org/2025/"
+startDate = "2025-06-11"
+endDate = "2025-06-14"
+countryCode = "CA"
+country = "Canada"
+city = "Ottawa"
+site = "University of Ottawa"
+description = "A four day BSD conference held in Ottawa, Canada. BSDCan hosts talks and tutorials on a range of topics based around the BSD family of operating systems."
+
