--- a/website/data/en/events/events2025.toml
+++ b/website/data/en/events/events2025.toml
@@ -25,3 +25,14 @@ city = "Ottawa"
 site = "University of Ottawa"
 description = "A four day BSD conference held in Ottawa, Canada. BSDCan hosts talks and tutorials on a range of topics based around the BSD family of operating systems."
 
+[[events]]
+id = "eurobsdcon-2025"
+name = "EuroBSDcon 2025"
+url = "https://2025.eurobsdcon.org"
+startDate = "2025-09-25"
+endDate = "2025-09-28"
+countryCode = "HR"
+country = "Croatia"
+city = "Zagreb"
+site = "TBA"
+description = "EuroBSDcon is the European annual technical conference gathering users and developers working on and with 4.4BSD (Berkeley Software Distribution) based operating systems family and related projects."
