website: Announce my enhanced commit privileges (src)

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -5,6 +5,10 @@ date = "2024-10-15"
 description = "Enhanced commit privileges: <a href=\"mailto:kbowling@FreeBSD.org\">Kevin Bowling</a> (src)"
 
 [[news]]
+date = "2024-10-07"
+description = "Enhanced commit privileges: <a href=\"mailto:0mp@FreeBSD.org\">Mateusz Piotrowski</a> (src)"
+
+[[news]]
 date = "2024-09-17"
 title = "FreeBSD 13.4-RELEASE Available"
 description = "<a href=\"https://www.FreeBSD.org/releases/13.4R/announce/\">FreeBSD 13.4-RELEASE</a> is now available. Please be sure to check the <a href=\"https://www.FreeBSD.org/releases/13.4R/relnotes/\">Release Notes</a> and <a href=\"https://www.FreeBSD.org/releases/13.4R/errata/\">Release Errata</a> before installation for any late-breaking news and/or issues with 13.4. More information about FreeBSD releases can be found on the <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a> page."
