traditional Chinese Translation of the latest news items (Oct 2024)

--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,14 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date = "2024-10-15"
+description = "增加提交權限: <a href=\"mailto:kbowling@FreeBSD.org\">Kevin Bowling</a> (src)"
+
+[[news]]
+date = "2024-10-07"
+description = "增加提交權限: <a href=\"mailto:0mp@FreeBSD.org\">Mateusz Piotrowski</a> (src)"
+
+[[news]]
 date = "2024-09-17"
 title = "FreeBSD 13.4-RELEASE 發布了"
 description = "<a href=\"https://www.FreeBSD.org/releases/13.4R/announce/\">FreeBSD 13.4-RELEASE</a>現已發布了。安裝前，請查看 <a href=\"https://www.FreeBSD.org/releases/13.4R/relnotes/\">發布通知</a>和 <a href=\"https://www.FreeBSD.org/releases/13.4R/errata/\">發行勘誤</a>以了解 13.4 的最新消息和問題。更多資訊可查看 <a href=\"https://www.FreeBSD.org/releases/\">發行版資訊</a>頁面。"
