Add FOSDEM 2025 to the events

--- a/website/data/en/events/events2025.toml
+++ b/website/data/en/events/events2025.toml
@@ -2,6 +2,17 @@
 year = 2025
 
 [[events]]
+id = "fosdem-2025
+name = "FOSDEM 2025"
+url = "https://fosdem.org/2025/"
+startDate = "2025-02-01"
+endDate = "2025-02-02"
+country = "Belgium"
+city = "Brussels"
+site = "ULB"
+description = "Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels. A BSD devroom is organized for presentations covering BSD operating system family, the <a href=\"https://people.freebsd.org/~rodrigo/fosdem25/\">Call For Participation</a> is now available."
+
+[[events]]
 id = "asiabsdcon-2025"
 name = "AsiaBSDCon 2025"
 url = "https://2025.asiabsdcon.org/"
