events: Fix FOSDEM entry
Reviewed by:	emaste, rodrigo
Differential Revision:	https://reviews.freebsd.org/D47300

--- a/website/data/en/events/events2025.toml
+++ b/website/data/en/events/events2025.toml
@@ -2,7 +2,7 @@
 year = 2025
 
 [[events]]
-id = "fosdem-2025
+id = "fosdem-2025"
 name = "FOSDEM 2025"
 url = "https://fosdem.org/2025/"
 startDate = "2025-02-01"
