Add EN-24:17 and SA-24:17 through SA-24:19.
Approved by:    so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,10 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-24:17.pam_xdg"
+date = "2024-10-29"
+
+[[notices]]
 name = "FreeBSD-EN-24:16.pf"
 date = "2024-09-19"
 
