traditional Chinese Translation of the latest news items (14.2-BETA1 announcement)

--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date = "2024-11-02"
+title = "FreeBSD 14.2-BETA1 發布了"
+description = "FreeBSD 14.2 的第一個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-November/002496.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
 date = "2024-10-15"
 description = "增加提交權限: <a href=\"mailto:kbowling@FreeBSD.org\">Kevin Bowling</a> (src)"
 
