--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date= "2024-11-07"
+title = "July-September 2024 Status Report"
+description = "The <a href=\"https://www.freebsd.org/status/report-2024-07-2024-09/\">July to September Status Report</a> is now available with 32 entries."
+
+[[news]]
 date = "2024-11-02"
 title = "FreeBSD 14.2-BETA1 Available"
 description = "The first BETA build for the FreeBSD 14.2 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-November/002496.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
