events: Add link to the BSD devroom in FOSDEM entry

--- a/website/data/en/events/events2025.toml
+++ b/website/data/en/events/events2025.toml
@@ -10,7 +10,7 @@ endDate = "2025-02-02"
 country = "Belgium"
 city = "Brussels"
 site = "ULB"
-description = "Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels. A BSD devroom is organized for presentations covering BSD operating system family, the <a href=\"https://people.freebsd.org/~rodrigo/fosdem25/\">Call For Participation</a> is now available."
+description = "Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels. A <a href=\"https://fosdem.org/2025/schedule/track/bsd/\">BSD devroom</a> is organized for presentations covering BSD operating system family, the <a href=\"https://people.freebsd.org/~rodrigo/fosdem25/\">Call For Participation</a> is now available."
 
 [[events]]
 id = "asiabsdcon-2025"
