--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,26 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date = "2024-11-23"
+title = "FreeBSD 14.2-RC1 發布了"
+description = "FreeBSD 14.2的第一個候選發布版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-November/002542.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date = "2024-11-17"
+title = "FreeBSD 14.2-BETA3 發布了"
+description = "FreeBSD 14.2 的第三個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-November/002528.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date = "2024-11-09"
+title = "FreeBSD 14.2-BETA2 發布了"
+description = "FreeBSD 14.2 的第二個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-November/002513.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+
+[[news]]
+date= "2024-11-07"
+title = "2024 第三季開發進度報告發布"
+description = "The <a href=\"https://www.freebsd.org/status/report-2024-07-2024-09/\">2024 第三季開發進度報告發布</a> 32則條目現已發布。"
+
+[[news]]
 date = "2024-11-02"
 title = "FreeBSD 14.2-BETA1 發布了"
 description = "FreeBSD 14.2 的第一個 BETA 版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-November/002496.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
@@ -21,17 +41,17 @@ description = "<a href=\"https://www.FreeBSD.org/releases/13.4R/announce/\">Free
 [[news]]
 date = "2024-09-07"
 title = "FreeBSD 13.4-RC3 發布了"
-description = "FreeBSD 13.R4的第三個候選發布版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-September/002367.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+description = "FreeBSD 13.4的第三個候選發布版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-September/002367.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
 
 [[news]]
 date = "2024-08-31"
 title = "FreeBSD 13.4-RC2 發布了"
-description = "FreeBSD 13.R4的第二個候選發布版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-August/002352.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+description = "FreeBSD 13.4的第二個候選發布版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-August/002352.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
 
 [[news]]
 date = "2024-08-24"
 title = "FreeBSD 13.4-RC1 發布了"
-description = "FreeBSD 13.R4的第一個候選發布版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-August/002345.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
+description = "FreeBSD 13.4的第一個候選發布版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv6、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-August/002345.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
 
 [[news]]
 date = "2024-08-22"
