--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2024-12-03"
+title = "FreeBSD 14.2-RELEASE Available"
+description = "<a href=\"https://www.FreeBSD.org/releases/14.2R/announce/\">FreeBSD 14.2-RELEASE</a> is now available. Please be sure to check the <a href=\"https://www.FreeBSD.org/releases/14.2R/relnotes/\">Release Notes</a> and <a href=\"https://www.FreeBSD.org/releases/14.2R/errata/\">Release Errata</a> before installation for any late-breaking news and/or issues with 14.2. More information about FreeBSD releases can be found on the <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a> page."
+
+[[news]]
 date = "2024-11-23"
 title = "FreeBSD 14.2-RC1 Available"
 description = "The first RC build for the FreeBSD 14.2 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-November/002542.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
