Traditional Chinese translation of the latest news item(FreeBSD 14.2-RELEASE Announcement)

--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date = "2024-12-03"
+title = "FreeBSD 14.2-RELEASE 發布了"
+description = "<a href=\"https://www.FreeBSD.org/releases/14.2R/announce/\">FreeBSD 14.2-RELEASE</a>現已發布了。安裝前，請查看 <a href=\"https://www.FreeBSD.org/releases/14.2R/relnotes/\">發布通知</a>和 <a href=\"https://www.FreeBSD.org/releases/14.2R/errata/\">發行勘誤</a>以了解 14.2 的最新消息和問題。更多資訊可查看 <a href=\"https://www.FreeBSD.org/releases/\">發行版資訊</a>頁面。"
+
+[[news]]
 date = "2024-11-23"
 title = "FreeBSD 14.2-RC1 發布了"
 description = "FreeBSD 14.2的第一個候選發布版本現已發布。用於 amd64、i386、powerpc、powerpc64、powerpc64le、powerpcspe、armv7、aarch64和 riscv64 的 ISO 映像檔案已經 <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2024-November/002542.html\">發布</a>，可以在多數的 <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD 鏡像站</a>取得。"
