--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,10 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-01-17"
+description = "New comitter: <a href=\"mailto:ziaee@FreeBSD.org\">Alexander Ziaee</a> (doc)"
+
+[[news]]
 date = "2024-12-03"
 title = "FreeBSD 14.2-RELEASE Available"
 description = "<a href=\"https://www.FreeBSD.org/releases/14.2R/announce/\">FreeBSD 14.2-RELEASE</a> is now available. Please be sure to check the <a href=\"https://www.FreeBSD.org/releases/14.2R/relnotes/\">Release Notes</a> and <a href=\"https://www.FreeBSD.org/releases/14.2R/errata/\">Release Errata</a> before installation for any late-breaking news and/or issues with 14.2. More information about FreeBSD releases can be found on the <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a> page."
