news.toml: fix a typo

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -2,7 +2,7 @@
 
 [[news]]
 date = "2025-01-17"
-description = "New comitter: <a href=\"mailto:ziaee@FreeBSD.org\">Alexander Ziaee</a> (doc)"
+description = "New committer: <a href=\"mailto:ziaee@FreeBSD.org\">Alexander Ziaee</a> (doc)"
 
 [[news]]
 date = "2024-12-03"
