New committer (ports): Austin Shafer (ashafer)
Complete steps 1-4 from the Committer's Guide, section 7.1 (For New
Committers):
1. Add an Author Entity.
2. Update the List of Developers and Contributors.
3. Add a News Item.
4. Add a PGP Key.

Approved by:	kbowling (mentor)
Differential Revision:	https://reviews.freebsd.org/D48694

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,10 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-01-26"
+description = "New committer: <a href=\"mailto:ashafer@FreeBSD.org\">Austin Shafer</a> (doc)"
+
+[[news]]
 date = "2025-01-17"
 description = "New committer: <a href=\"mailto:ziaee@FreeBSD.org\">Alexander Ziaee</a> (doc)"
 
