--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,18 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-25:03.tzdata"
+date = "2025-01-29"
+
+[[notices]]
+name = "FreeBSD-EN-25:02.audit"
+date = "2025-01-29"
+
+[[notices]]
+name = "FreeBSD-EN-25:01.rpc"
+date = "2025-01-29"
+
+[[notices]]
 name = "FreeBSD-EN-24:17.pam_xdg"
 date = "2024-10-29"
 
