news: correct commit bit type for ashafer
This fixes commit a52de44df1, which erroneously marked my commit
bit type as doc instead of ports. This updates the entry to the
correct commit bit type

Reviewed by:	kbowling (mentor), grahamperrin
Differential Revision:	https://reviews.freebsd.org/D48909

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -7,7 +7,7 @@ description = "The first BETA build for the FreeBSD 13.5 release cycle is now av
 
 [[news]]
 date = "2025-01-26"
-description = "New committer: <a href=\"mailto:ashafer@FreeBSD.org\">Austin Shafer</a> (doc)"
+description = "New committer: <a href=\"mailto:ashafer@FreeBSD.org\">Austin Shafer</a> (ports)"
 
 [[news]]
 date = "2025-01-17"
