traditional Chinese Translation of the latest news items (Jan 2025)

--- a/website/data/zh-tw/news/news.toml
+++ b/website/data/zh-tw/news/news.toml
@@ -1,6 +1,14 @@
 # Sort news by year, month and day
 # $FreeBSD$
 [[news]]
+date = "2025-01-26"
+description = "新任 committer: <a href=\"mailto:ashafer@FreeBSD.org\">Austin Shafer</a> (ports)"
+
+[[news]]
+date = "2025-01-17"
+description = "新任 committer: <a href=\"mailto:ziaee@FreeBSD.org\">Alexander Ziaee</a> (doc)"
+
+[[news]]
 date = "2024-12-03"
 title = "FreeBSD 14.2-RELEASE 發布了"
 description = "<a href=\"https://www.FreeBSD.org/releases/14.2R/announce/\">FreeBSD 14.2-RELEASE</a>現已發布了。安裝前，請查看 <a href=\"https://www.FreeBSD.org/releases/14.2R/relnotes/\">發布通知</a>和 <a href=\"https://www.FreeBSD.org/releases/14.2R/errata/\">發行勘誤</a>以了解 14.2 的最新消息和問題。更多資訊可查看 <a href=\"https://www.FreeBSD.org/releases/\">發行版資訊</a>頁面。"
