--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,23 @@
 # Sort the entries by date
 [[press]]
+name = "New CHAOSScast Episode: GrimoireLab at FreeBSD"
+url = "https://freebsdfoundation.org/news-and-events/latest-news/new-chaosscast-episode-grimoirelab-at-freebsd/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-02-06"
+author = "FreeBSD Foundation"
+description = "Discussion of FreeBSD’s adoption of GrimoireLab for enhanced project metrics and bug management"
+
+[[press]]
+name = "Laptop Support and Usability Project Update: First Monthly Report & Community Initiatives"
+url = "https://freebsdfoundation.org/blog/laptop-support-and-usability-project-update-first-monthly-report-community-initiatives/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-02-03"
+author = "FreeBSD Foundation"
+description = "Update on the Foundation-sponsored Laptop Support and Usability development project"
+
+[[press]]
 name = "Sovereign Tech Fund to Invest €686,400 in FreeBSD Infrastructure Modernization"
 url = "https://freebsdfoundation.org/blog/sovereign-tech-fund-to-invest-e686400-in-freebsd-infrastructure-modernization/"
 siteName = "FreeBSD Foundation Blog"
