News: Announce 2024Q4 status report

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date= "2025-02-27"
+title = "October-December 2024 Status Report"
+description = "The <a href=\"https://www.freebsd.org/status/report-2024-10-2024-12/\">October to December Status Report</a> is now available with 44 entries."
+
+[[news]]
 date = "2025-02-22"
 title = "FreeBSD 13.5-BETA3 Available"
 description = "The third BETA build for the FreeBSD 13.5 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv6, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-February/002715.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
