--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -3,7 +3,7 @@
 [[news]]
 date = "2025-03-02"
 title = "FreeBSD 13.5-RC1 Available"
-description = "The third Release Candidate build for the FreeBSD 13.5 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv6, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-February/002719.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
+description = "The first Release Candidate build for the FreeBSD 13.5 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv6, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-February/002719.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
 
 [[news]]
 date= "2025-02-27"
