--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-03-11"
+title = "FreeBSD 13.5-RELEASE Available"
+description = "<a href=\"https://www.FreeBSD.org/releases/13.5R/announce/\">FreeBSD 13.5-RELEASE</a> is now available. Please be sure to check the <a href=\"https://www.FreeBSD.org/releases/13.5R/relnotes/\">Release Notes</a> and <a href=\"https://www.FreeBSD.org/releases/13.5R/errata/\">Release Errata</a> before installation for any late-breaking news and/or issues with 13.5. More information about FreeBSD releases can be found on the <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a> page."
+
+[[news]]
 date = "2025-03-02"
 title = "FreeBSD 13.5-RC1 Available"
 description = "The first Release Candidate build for the FreeBSD 13.5 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv6, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-February/002719.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
