--- a/website/data/en/events/events2025.toml
+++ b/website/data/en/events/events2025.toml
@@ -13,6 +13,18 @@ site = "ULB"
 description = "Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels. A <a href=\"https://fosdem.org/2025/schedule/track/bsd/\">BSD devroom</a> is organized for presentations covering BSD operating system family, the <a href=\"https://people.freebsd.org/~rodrigo/fosdem25/\">Call For Participation</a> is now available."
 
 [[events]]
+id = "BSD-NL2025"
+name = "BSD-NL 2025"
+url = "https://bsdnl.nl/"
+startDate = "2025-04-12"
+endDate = "2025-04-12"
+countryCode = "NL"
+country = "The Netherlands"
+city = "Utrecht"
+site = "Brouwerij Maximus, Pratumplaats 2A, 3454 NA Utrecht"
+description = "Whoohoo! It’s time for our third conference, held at the Maximus Brewery in Utrecht. There will be talks, hacking, slacking, beer and food."
+
+[[events]]
 id = "bsdcan-2025"
 name = "BSDCan 2025"
 url = "https://www.bsdcan.org/2025/"
