Add EN-25:04 through EN-25:08.
Approved by:	so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,26 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-25:08.caroot"
+date = "2025-04-10"
+
+[[notices]]
+name = "FreeBSD-EN-25:07.openssl"
+date = "2025-04-10"
+
+[[notices]]
+name = "FreeBSD-EN-25:06.daemon"
+date = "2025-04-10"
+
+[[notices]]
+name = "FreeBSD-EN-25:05.expat"
+date = "2025-04-10"
+
+[[notices]]
+name = "FreeBSD-EN-25:04.tzdata"
+date = "2025-04-10"
+
+[[notices]]
 name = "FreeBSD-EN-25:03.tzdata"
 date = "2025-01-29"
 
