--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,10 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-04-18"
+description = "New committer: <a href=\"mailto:ivy@FreeBSD.org\">Lexi Winter</a> (src)"
+
+[[news]]
 date = "2025-03-11"
 title = "FreeBSD 13.5-RELEASE Available"
 description = "<a href=\"https://www.FreeBSD.org/releases/13.5R/announce/\">FreeBSD 13.5-RELEASE</a> is now available. Please be sure to check the <a href=\"https://www.FreeBSD.org/releases/13.5R/relnotes/\">Release Notes</a> and <a href=\"https://www.FreeBSD.org/releases/13.5R/errata/\">Release Errata</a> before installation for any late-breaking news and/or issues with 13.5. More information about FreeBSD releases can be found on the <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a> page."
