--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-04-24"
+title = "FreeBSD 2025 Community Survey"
+description = "The <a href=\"https://www.surveymonkey.com/r/freebsdsurvey25\">FreeBSD 2025 Community Survey</a> is now available. Please feel free to share the survey URL with your employer, co-workers, friends, or any other community members interested in FreeBSD. Survey closes at 22:00 UTC on Wednesday, May 7th, 2025."
+
+[[news]]
 date = "2025-04-18"
 description = "New committer: <a href=\"mailto:ivy@FreeBSD.org\">Lexi Winter</a> (src)"
 
