--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-05-02"
+title = "FreeBSD 14.3-BETA1 Available"
+description = "The first BETA build for the FreeBSD 14.3 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv6, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-May/002810.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
+
+[[news]]
 date = "2025-04-24"
 title = "FreeBSD 2025 Community Survey"
 description = "The <a href=\"https://www.surveymonkey.com/r/freebsdsurvey25\">FreeBSD 2025 Community Survey</a> is now available. Please feel free to share the survey URL with your employer, co-workers, friends, or any other community members interested in FreeBSD. Survey closes at 22:00 UTC on Wednesday, May 7th, 2025."
