Press: Added recent news updates from the Foundation
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D50288

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,50 @@
 # Sort the entries by date
 [[press]]
+name = "The Hidden Costs of Stagnation: Why Running EOL Software is a Ticking Time Bomb"
+url = "https://freebsdfoundation.org/blog/the-hidden-costs-of-stagnation-why-running-eol-software-is-a-ticking-time-bomb/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-05-02"
+author = "FreeBSD Foundation"
+description = "Why regularly updating your systems is essential"
+
+[[press]]
+name ="March/April 2025 FreeBSD Newsletter"
+url = "https://freebsdfoundation.org/news-and-events/newsletter/march-april-2025-freebsd-newsletter/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-04-30"
+author = "FreeBSD Foundation"
+description = "The March/April FreeBSD Newsletter"
+
+[[press]]
+name = "ZFS Log Compression on FreeBSD"
+url = "https://freebsdfoundation.org/blog/zfs-log-compression-on-freebsd/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-04-16"
+author = "FreeBSD Foundation"
+description = "Compressing system logs on the fly with ZFS"
+
+[[press]]
+name = "Advocating for FreeBSD: A FOSDEM 2025 Trip Report"
+url = "https://freebsdfoundation.org/blog/advocating-for-freebsd-a-fosdem-2025-trip-report/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-04-08"
+author = "FreeBSD Foundation"
+description = "Tom Jones reports back from his visit to FOSDEM 2025"
+
+[[press]]
+name = "OpenZFS Cheat Sheet"
+url = "https://freebsdfoundation.org/blog/openzfs-cheat-sheet/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-04-03"
+author = "FreeBSD Foundation"
+description = "To help use OpenZFS, we created an OpenZFS cheat sheet"
+
+[[press]]
 name = "Improvements to the FreeBSD CI/CD systems"
 url = "https://freebsdfoundation.org/blog/improvements-to-the-freebsd-ci-cd-systems/"
 siteName = "FreeBSD Foundation Blog"
