Press: Add Register article about FreeBSD and Foundation
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D50300

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -18,6 +18,15 @@ author = "FreeBSD Foundation"
 description = "The March/April FreeBSD Newsletter"
 
 [[press]]
+name = "From PlayStation to routers, you've probably been using FreeBSD without knowing it"
+url = "https://www.theregister.com/2025/04/28/freebsd_foundation_25/"
+siteName = "The Register"
+siteUrl = "https://www.theregister.com"
+date = "2025-04-28"
+author = "Liam Proven"
+description = "The OS came first, the foundation later – so what does it do?"
+
+[[press]]
 name = "ZFS Log Compression on FreeBSD"
 url = "https://freebsdfoundation.org/blog/zfs-log-compression-on-freebsd/"
 siteName = "FreeBSD Foundation Blog"
