Press: Add Foundation blog post about high speed Wi-Fi
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D50435

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,14 @@
 # Sort the entries by date
 [[press]]
+name = "How to unlock high speed Wi-Fi on FreeBSD 14"
+url = "https://freebsdfoundation.org/blog/how-to-unlock-high-speed-wi-fi-on-freebsd-14/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-05-13"
+author = "FreeBSD Foundation"
+description = "Faster Wi-Fi is coming to 14.3, but you can enable it today"
+
+[[press]]
 name = "The Hidden Costs of Stagnation: Why Running EOL Software is a Ticking Time Bomb"
 url = "https://freebsdfoundation.org/blog/the-hidden-costs-of-stagnation-why-running-eol-software-is-a-ticking-time-bomb/"
 siteName = "FreeBSD Foundation Blog"
