--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-05-24"
+title = "FreeBSD 14.3-BETA4 Available"
+description = "The fourth BETA build for the FreeBSD 14.3 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv6, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-May/002853.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
+
+[[news]]
 date= "2025-05-21"
 title = "January-March 2025 Status Report"
 description = "The <a href=\"https://www.freebsd.org/status/report-2025-01-2025-03/\">January to March Status Report</a> is now available with 40 entries."
