--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,10 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-06-02"
+description = "New committer: <a href=\"mailto:dtxdf@FreeBSD.org\">Jesús Daniel Colmenares Oviedo</a> (ports)"
+
+[[news]]
 date = "2025-06-01"
 title = "FreeBSD 14.3-RC1 Available"
 description = "The first release candidate build for the FreeBSD 14.3 release cycle is now available. ISO images for the amd64, i386, powerpc, powerpc64, powerpc64le, powerpcspe, armv6, armv7, aarch64, and riscv64 architectures are <a href=\"https://lists.freebsd.org/archives/freebsd-stable/2025-June/002856.html\">available</a> on most of our <a href=\"https://docs.freebsd.org/en/books/handbook/mirrors/#mirrors-ftp\">FreeBSD mirror sites</a>."
