press: Add Foundation blog about Sanoid
Reviewed by:	bcr, jrm
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D50681

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,14 @@
 # Sort the entries by date
 [[press]]
+name = "ZFS automatic snapshots with Sanoid on FreeBSD"
+url = "https://freebsdfoundation.org/blog/zfs-automatic-snapshots-with-sanoid-on-freebsd/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-05-27"
+author = "FreeBSD Foundation"
+description = "Take automatic ZFS snapshots at regular intervals and rotate them with Sanoid"
+
+[[press]]
 name = "How to unlock high speed Wi-Fi on FreeBSD 14"
 url = "https://freebsdfoundation.org/blog/how-to-unlock-high-speed-wi-fi-on-freebsd-14/"
 siteName = "FreeBSD Foundation Blog"
