--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,11 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-06-10"
+title = "FreeBSD 14.3-RELEASE Available"
+description = "<a href=\"https://www.FreeBSD.org/releases/14.3R/announce/\">FreeBSD 14.3-RELEASE</a> is now available. Please be sure to check the <a href=\"https://www.FreeBSD.org/releases/14.3R/relnotes/\">Release Notes</a> and <a href=\"https://www.FreeBSD.org/releases/14.3R/errata/\">Release Errata</a> before installation for any late-breaking news and/or issues with 14.3. More information about FreeBSD releases can be found on the <a href=\"https://www.FreeBSD.org/releases/\">Release Information</a> page."
+
+[[news]]
 date = "2025-06-02"
 description = "New committer: <a href=\"mailto:dtxdf@FreeBSD.org\">Jesús Daniel Colmenares Oviedo</a> (ports)"
 
