New committer (ports): Älven (alven)
My first steps as a new committer, following the Committer's Guide: [0]

1. Add an Author Entity (doc/shared/authors.adoc)
2. Update the List of Developers and Contributors (doc/shared/contrib-committers.adoc)
3. Add a News Item (doc/website/data/en/news/news.toml)
4. Add a PGP Key (doc/documentation/static/pgpkeys/alven.key)

[0] https://docs.freebsd.org/en/articles/committers-guide/#conventions-committers

PR:		287620
Approved by:	db@ (Mentor)

--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -10,6 +10,10 @@ description = "New committer: <a href=\"mailto:aokblast@FreeBSD.org\">ShengYi Hu
 
 [[news]]
 date = "2025-06-13"
+description = "New committer: <a href=\"mailto:alven@FreeBSD.org\">Älven</a> (ports)"
+
+[[news]]
+date = "2025-06-13"
 description = "New committer: <a href=\"mailto:vexeduxr@FreeBSD.org\">Ahmad Khalifa</a> (src)"
 
 [[news]]
