Add EN-25:09 through EN-25:11 and SA-25:06.
Approved by:	so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,18 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-25:11.ena"
+date = "2025-07-02"
+
+[[notices]]
+name = "FreeBSD-EN-25:10.zfs"
+date = "2025-07-02"
+
+[[notices]]
+name = "FreeBSD-EN-25:09.libc"
+date = "2025-07-02"
+
+[[notices]]
 name = "FreeBSD-EN-25:08.caroot"
 date = "2025-04-10"
 
