press: Add recent Foundation articles
Reviewed by:	allanjude, jrm
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D51109

--- a/website/data/en/press/press.toml
+++ b/website/data/en/press/press.toml
@@ -1,5 +1,50 @@
 # Sort the entries by date
 [[press]]
+name = "FreeBSD Foundation Welcomes New Board Member: John Baldwin"
+url = "https://freebsdfoundation.org/blog/freebsd-foundation-welcomes-new-board-member-john-baldwin/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-06-27"
+author = "FreeBSD Foundation"
+description = "Long-time FreeBSD community member, John Baldwin, was elected to the FreeBSD Foundation Board during the Annual Meeting"
+
+[[press]]
+name = "Software Bill of Materials (SBOM) for FreeBSD Project"
+url = "https://freebsdfoundation.org/blog/software-bill-of-materials-sbom-for-freebsd-project/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-06-26"
+author = "FreeBSD Foundation"
+description = "Commissioned by the Sovereign Tech Agency, work began in April 2025 on a new project to enable SBOMs for FreeBSD"
+
+[[press]]
+name = "FreeBSD Ports and Packages Security Project"
+url = "https://freebsdfoundation.org/blog/freebsd-ports-and-packages-security-project/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-06-26"
+author = "FreeBSD Foundation"
+description = "Commissioned by the Sovereign Tech Agency, work began in April 2025 on a new project to further Ports and Package Security"
+
+[[press]]
+name = "Three Ways to Try FreeBSD in Under Five Minutes"
+url = "https://freebsdfoundation.org/blog/three-ways-to-try-freebsd-in-under-five-minutes/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-06-06"
+author = "FreeBSD Foundation"
+description = "Let’s take a quick look at getting started with the latest production release of FreeBSD via three different platforms"
+
+[[press]]
+name = "The Road to Better Wi-Fi on FreeBSD"
+url = "https://freebsdfoundation.org/blog/the-road-to-better-wi-fi-on-freebsd/"
+siteName = "FreeBSD Foundation Blog"
+siteUrl = "https://freebsdfoundation.org/blog/"
+date = "2025-06-05"
+author = "FreeBSD Foundation"
+description = "To understand how far we’ve come, it helps to look back at the road that led to today, starting with the earliest wireless work in FreeBSD"
+
+[[press]]
 name = "ZFS automatic snapshots with Sanoid on FreeBSD"
 url = "https://freebsdfoundation.org/blog/zfs-automatic-snapshots-with-sanoid-on-freebsd/"
 siteName = "FreeBSD Foundation Blog"
