--- a/website/data/en/news/news.toml
+++ b/website/data/en/news/news.toml
@@ -1,6 +1,10 @@
 # Sort news by year, month and day
 
 [[news]]
+date = "2025-07-15"
+description = "New committer: <a href=\"mailto:obiwac@FreeBSD.org\">Aymeric Wibo</a> (src)"
+
+[[news]]
 date = "2025-07-01"
 description = "New committer: <a href=\"mailto:aokblast@FreeBSD.org\">ShengYi Hung</a> (src)"
 
