Add EN-25:12 through EN-25:14 and SA-25:07.
Approved by:    so

--- a/website/data/security/errata.toml
+++ b/website/data/security/errata.toml
@@ -2,6 +2,18 @@
 # $FreeBSD$
 
 [[notices]]
+name = "FreeBSD-EN-25:14.route"
+date = "2025-08-08"
+
+[[notices]]
+name = "FreeBSD-EN-25:13.wlan_tkip"
+date = "2025-08-08"
+
+[[notices]]
+name = "FreeBSD-EN-25:12.efi"
+date = "2025-08-08"
+
+[[notices]]
 name = "FreeBSD-EN-25:11.ena"
 date = "2025-07-02"
 
